--- a/index.html
+++ b/index.html
@@ -12,10 +12,136 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
 </head>
 
 <body>
+
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">
+                Architecture
+            </a>
+
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li>
+                        <a href="" class="nav__link">Home</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav__link">Project</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav__link">News</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav__link">Store</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav__link">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-line"></i>
+                </div>
+            </div>
+
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-menu-line"></i>
+            </div>
+        </nav>
+    </header>
+
+    <main class="main">
+        <section class="home">
+            <div class="home__swiper swiper">
+                <div class="swiper-wrapper">
+                    <article class="home__article swiper-slide">
+                        <div class="home__data container">
+                            <h3 class="home__subtitle">Architecture</h3>
+                            <h1 class="home__title">Relaxing Steep <br> Lake House</h1>
+                            <a href="#" class="home__button">
+                                See Project <i class="ri-arrow-right-s-line"></i>
+                            </a>
+                        </div>
+
+                        <img src="assets/images/home-1.jpg" alt="image" class="home__img">
+                    </article>
+
+                    <article class="home__article swiper-slide">
+                        <div class="home__data container">
+                            <h3 class="home__subtitle">Architecture</h3>
+                            <h1 class="home__title">Luxury House <br> In The Forest</h1>
+                            <a href="#" class="home__button">
+                                See Project <i class="ri-arrow-right-s-line"></i>
+                            </a>
+                        </div>
+
+                        <img src="assets/images/home-2.jpg" alt="image" class="home__img">
+                    </article>
+
+                    <article class="home__article swiper-slide">
+                        <div class="home__data container">
+                            <h3 class="home__subtitle">Architecture</h3>
+                            <h1 class="home__title">Modern House <br> On The Rock</h1>
+                            <a href="#" class="home__button">
+                                See Project <i class="ri-arrow-right-s-line"></i>
+                            </a>
+                        </div>
+
+                        <img src="assets/images/home-3.jpg" alt="image" class="home__img">
+                    </article>
+
+                    <article class="home__article swiper-slide">
+                        <div class="home__data container">
+                            <h3 class="home__subtitle">
+                                Architecture</h3>
+                            <h1 class="home__title">Luxury <br> Curved House</h1>
+                            <a href="#" class="home__button">
+                                See Project <i class="ri-arrow-right-s-line"></i>
+                            </a>
+                        </div>
+
+                        <img src="assets/images/home-4.jpg" alt="" class="home__img">
+                    </article>
+                </div>
+            </div>
+
+            <div class="home__content">
+                <div class="home__social">
+                    <a href="https://www.facebook.com/" target="_blank" class="home__social-link">
+                        <i class="ri-facebook-circle-line"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
+                        <i class="ri-instagram-line"></i>
+                    </a>
+                    <a href="https://x.com/" target="_blank" class="home__social-link">
+                        <i class="ri-twitter-x-line"></i>
+                    </a>
+                    <a href="https://www.threads.net" target="_blank" class="home__social-link">
+                        <i class="ri-threads-line"></i>
+                    </a>
+                </div>
+
+                <div class="swiper-pagination"></div>
+
+                <div class="swiper-navigation">
+                    <div class="swiper-button-prev">
+
+                    </div>
+                    <div class="swiper-button-next">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
