--- a/index.html
+++ b/index.html
@@ -60,51 +60,51 @@
                 <div class="swiper-wrapper">
                     <article class="home__article swiper-slide">
                         <div class="home__data container">
-                            <h3 class="home__subtitle">Architecture</h3>
-                            <h1 class="home__title">Relaxing Steep <br> Lake House</h1>
-                            <a href="#" class="home__button">
+                            <h3 class="home__subtitle" data-swiper-parallax="500">Architecture</h3>
+                            <h1 class="home__title" data-swiper-parallax="400">Relaxing Steep <br> Lake House</h1>
+                            <a href="#" class="home__button" data-swiper-parallax="300">
                                 See Project <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </div>
 
-                        <img src="assets/images/home-1.jpg" alt="image" class="home__img">
+                        <img src="assets/images/home-1.jpg" alt="image" class="home__img" data-swiper-parallax="-300">
                     </article>
 
                     <article class="home__article swiper-slide">
                         <div class="home__data container">
-                            <h3 class="home__subtitle">Architecture</h3>
-                            <h1 class="home__title">Luxury House <br> In The Forest</h1>
-                            <a href="#" class="home__button">
+                            <h3 class="home__subtitle" data-swiper-parallax="500">Architecture</h3>
+                            <h1 class="home__title" data-swiper-parallax="400">Luxury House <br> In The Forest</h1>
+                            <a href="#" class="home__button" data-swiper-parallax="300">
                                 See Project <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </div>
 
-                        <img src="assets/images/home-2.jpg" alt="image" class="home__img">
+                        <img src="assets/images/home-2.jpg" alt="image" class="home__img" data-swiper-parallax="-300">
                     </article>
 
                     <article class="home__article swiper-slide">
                         <div class="home__data container">
-                            <h3 class="home__subtitle">Architecture</h3>
-                            <h1 class="home__title">Modern House <br> On The Rock</h1>
-                            <a href="#" class="home__button">
+                            <h3 class="home__subtitle" data-swiper-parallax="500">Architecture</h3>
+                            <h1 class="home__title" data-swiper-parallax="400">Modern House <br> On The Rock</h1>
+                            <a href="#" class="home__button" data-swiper-parallax="300">
                                 See Project <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </div>
 
-                        <img src="assets/images/home-3.jpg" alt="image" class="home__img">
+                        <img src="assets/images/home-3.jpg" alt="image" class="home__img" data-swiper-parallax="-300">
                     </article>
 
                     <article class="home__article swiper-slide">
                         <div class="home__data container">
-                            <h3 class="home__subtitle">
+                            <h3 class="home__subtitle" data-swiper-parallax="500">
                                 Architecture</h3>
-                            <h1 class="home__title">Luxury <br> Curved House</h1>
-                            <a href="#" class="home__button">
+                            <h1 class="home__title" data-swiper-parallax="400">Luxury <br> Curved House</h1>
+                            <a href="#" class="home__button" data-swiper-parallax="300">
                                 See Project <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </div>
 
-                        <img src="assets/images/home-4.jpg" alt="" class="home__img">
+                        <img src="assets/images/home-4.jpg" alt="" class="home__img" data-swiper-parallax="-300">
                     </article>
                 </div>
             </div>
@@ -129,10 +129,10 @@
 
                 <div class="swiper-navigation">
                     <div class="swiper-button-prev">
-
+                        <i class="ri-arrow-left-s-line"></i>
                     </div>
                     <div class="swiper-button-next">
-
+                        <i class="ri-arrow-right-s-line"></i>
                     </div>
                 </div>
             </div>
