--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li>
-                        <a href="" class="nav__link">Home</a>
+                        <a href="#" class="nav__link">Home</a>
                     </li>
                     <li>
-                        <a href="" class="nav__link">Project</a>
+                        <a href="#" class="nav__link">Project</a>
                     </li>
                     <li>
-                        <a href="" class="nav__link">News</a>
+                        <a href="#" class="nav__link">News</a>
                     </li>
                     <li>
-                        <a href="" class="nav__link">Store</a>
+                        <a href="#" class="nav__link">Store</a>
                     </li>
                     <li>
-                        <a href="" class="nav__link">Contact</a>
+                        <a href="#" class="nav__link">Contact</a>
                     </li>
                 </ul>
 
@@ -68,6 +68,7 @@
                         </div>
 
                         <img src="assets/images/home-1.jpg" alt="image" class="home__img" data-swiper-parallax="-300">
+                        <div class="home__shadow"></div>
                     </article>
 
                     <article class="home__article swiper-slide">
@@ -80,6 +81,7 @@
                         </div>
 
                         <img src="assets/images/home-2.jpg" alt="image" class="home__img" data-swiper-parallax="-300">
+                        <div class="home__shadow"></div>
                     </article>
 
                     <article class="home__article swiper-slide">
@@ -92,6 +94,7 @@
                         </div>
 
                         <img src="assets/images/home-3.jpg" alt="image" class="home__img" data-swiper-parallax="-300">
+                        <div class="home__shadow"></div>
                     </article>
 
                     <article class="home__article swiper-slide">
@@ -105,6 +108,7 @@
                         </div>
 
                         <img src="assets/images/home-4.jpg" alt="" class="home__img" data-swiper-parallax="-300">
+                        <div class="home__shadow"></div>
                     </article>
                 </div>
             </div>
