--- a/index.html
+++ b/index.html
@@ -14,6 +14,54 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
+    <style>
+        .swiper {
+            height: 100vh;
+        }
+
+        .swiper-pagination {
+            width: initial;
+            height: max-content;
+            top: 6rem;
+            left: initial;
+            right: 4rem;
+            font-size: 1.5rem;
+            font-weight: 600;
+            display: flex;
+            column-gap: .25rem;
+            align-items: center;
+        }
+
+        .swiper-pagination-total {
+            font-size: .938rem;
+        }
+
+        .swiper-button-prev::after,
+        .swiper-button-next::after {
+            content: '';
+        }
+
+        .swiper-button-prev,
+        .swiper-button-next {
+            font-size: 2rem;
+            color: hsl(0, 0%, 100%);
+            width: initial;
+            height: initial;
+            position: initial;
+            outline: none;
+        }
+
+        .swiper-navigation {
+            position: absolute;
+            z-index: 10;
+            height: max-content;
+            bottom: 4rem;
+            right: 1.5rem;
+            display: flex;
+            column-gap: 2.5rem;
+        }
+    </style>
+
 </head>
 
 <body>
